_notes/errbyfile/ChatHudMixin.java.txt
org\wild\mixin\ChatHudMixin.java:63: error: incompatible types: Object 
cannot be converted to Text
            for (Text var9 : var12) {
                             ^

  org\wild\mixin\ChatHudMixin.java:63: error: incompatible types: Object 
cannot be converted to Text
              for (Text var9 : var12) {
                               ^
